<resources>
    <string name="app_name">Calculadora de IMC</string>
    <string name="info">Informações para o cálculo</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="insira_peso">Insira seu peso (em KGs)</string>
    <string name="insiraAltura">Insira sua altura (em metros)</string>
    <string name="calcular">Calcular IMC</string>
    <string name="resultado">Resultado</string>

</resources>