<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imc_gradient"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtInfo"
                style="@style/style_texto_principal"
                android:text="@string/info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgPeso"
                style="@style/style_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfo"
                app:srcCompat="@drawable/weight_icon" />

            <TextView
                android:id="@+id/txtPeso"
                style="@style/style_texto_secundario"
                android:layout_marginStart="60dp"
                android:text="@string/peso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPeso" />

            <ImageView
                android:id="@+id/imgAltura"
                style="@style/style_img"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPeso"
                app:srcCompat="@drawable/height_icon" />

            <TextView
                android:id="@+id/txtAltura"
                style="@style/style_texto_secundario"
                android:layout_marginStart="52dp"
                android:text="@string/altura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAltura" />

            <EditText
                android:id="@+id/edtPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insira_peso"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/imgPeso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPeso"
                app:layout_constraintTop_toTopOf="@+id/imgPeso" />

            <EditText
                android:id="@+id/edtAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insiraAltura"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/imgAltura"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAltura"
                app:layout_constraintTop_toTopOf="@+id/imgAltura" />

            <Button
                android:id="@+id/buttonCalcular"
                android:layout_width="162dp"
                android:layout_height="55dp"
                android:background="@drawable/background_btn"
                android:backgroundTint="@color/azulVariante"
                android:text="@string/calcular"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAltura" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@color/white"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewInfo"
        app:layout_constraintVertical_bias="0.094">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtResult"
                style="@style/style_texto_principal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgResultado"
                android:layout_width="81sp"
                android:layout_height="81sp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtResult" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imgResultado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgResultado"
                app:layout_constraintTop_toBottomOf="@+id/txtResult" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>